feat: switch to attribute markering

--- a/tests/DotAwait.ConsoleTest/DotAwait.ConsoleTest.csproj
+++ b/tests/DotAwait.ConsoleTest/DotAwait.ConsoleTest.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DotAwait" Version="*-*" />
+    <PackageReference Include="DotAwait" Version="*-dev.*" />
   </ItemGroup>
 
 </Project>
