--- a/src/DotAwait/DotAwait.csproj
+++ b/src/DotAwait/DotAwait.csproj
@@ -5,13 +5,16 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <LangVersion>latest</LangVersion>
     <Nullable>enable</Nullable>
+    <EnforceExtendedAnalyzerRules>false</EnforceExtendedAnalyzerRules>
     <IsPackable>true</IsPackable>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
     <IncludeBuildOutput>false</IncludeBuildOutput>
     <DevelopmentDependency>true</DevelopmentDependency>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <NoWarn>$(NoWarn);NU5128</NoWarn>
+    <NoWarn>$(NoWarn);NU5128;RS1036;RS2008</NoWarn>
+    <EnableDefaultNoneItems>true</EnableDefaultNoneItems>
+    <TargetsForTfmSpecificContentInPackage>$(TargetsForTfmSpecificContentInPackage);AddPackItems</TargetsForTfmSpecificContentInPackage>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -28,11 +31,6 @@
     <VersionSuffix Condition="'$(VersionSuffix)' == ''">dev.$([System.DateTime]::UtcNow.ToString('yyyyMMddHHmmss'))</VersionSuffix>
   </PropertyGroup>
 
-  <PropertyGroup>
-    <_BuildDirectory>$(MSBuildProjectDirectory)\build</_BuildDirectory>
-    <_BuildToolsDirectory>$(_BuildDirectory)\tools</_BuildToolsDirectory>
-  </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="Microsoft.Build.Utilities.Core" Version="18.0.2" PrivateAssets="All" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.10.0" PrivateAssets="All" />
@@ -45,32 +43,16 @@
   <ItemGroup>
     <None Include="..\..\README.md" Pack="true" PackagePath="\" Visible="false" />
     <None Include="..\..\img\icon.png" Pack="true" PackagePath="\" Visible="false" />
-    <None Include="$(_BuildDirectory)\**" Pack="true" PackagePath="build\" />
-    <None Include="contentFiles\cs\any\**" Pack="true" PackagePath="contentFiles\cs\any\" BuildAction="Compile" />
-    <Compile Remove="contentFiles\cs\any\**" />
+    <None Include="build\**\*.props;build\**\*.targets" Pack="true" PackagePath="build\" />
+    <None Include="contentFiles\cs\any\**\*" Pack="true" PackagePath="contentFiles\cs\any" BuildAction="Compile" />
+    <Compile Remove="contentFiles\cs\any\**\*" />
   </ItemGroup>
 
-  <Target Name="CopyTasksToBuildTransitive" AfterTargets="Build">
-   
-    <MakeDir Directories="$(_BuildToolsDirectory)" />
-
+  <Target Name="AddPackItems">
     <ItemGroup>
-      <_TaskFiles Include="$(TargetPath)" />
-      <_TaskFiles Include="@(ReferenceCopyLocalPaths)" />
+      <TfmSpecificPackageFile Include="$(TargetDir)**\*" PackagePath="build/tools/" />
+      <TfmSpecificPackageFile Include="$(TargetPath)" PackagePath="analyzers/dotnet/cs/" />
     </ItemGroup>
-
-    <Copy SourceFiles="@(_TaskFiles)" DestinationFolder="$(_BuildToolsDirectory)" SkipUnchangedFiles="true" />
-
-  </Target>
-
-  <Target Name="PackTaskFiles" BeforeTargets="Pack">
-    <ItemGroup>
-      <None Include="$(_BuildToolsDirectory)\**" Pack="true" PackagePath="buildTransitive\tools" />
-    </ItemGroup>
-  </Target>
-
-  <Target Name="CleanTools" AfterTargets="Clean" Condition="Exists('$(_BuildToolsDirectory)')">
-    <RemoveDir Directories="$(_BuildToolsDirectory)" />
   </Target>
 
 </Project>
