--- a/src/DotAwait/DotAwait.csproj
+++ b/src/DotAwait/DotAwait.csproj
@@ -41,16 +41,16 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="..\..\README.md" Pack="true" PackagePath="\" Visible="false" />
-    <None Include="..\..\img\icon.png" Pack="true" PackagePath="\" Visible="false" />
-    <None Include="build\**\*.props;build\**\*.targets" Pack="true" PackagePath="build\" />
-    <None Include="contentFiles\cs\any\**\*" Pack="true" PackagePath="contentFiles\cs\any" BuildAction="Compile" />
-    <Compile Remove="contentFiles\cs\any\**\*" />
+    <None Include="../../README.md" Pack="true" PackagePath="/" Visible="false" />
+    <None Include="../../img/icon.png" Pack="true" PackagePath="/" Visible="false" />
+    <None Include="build/**/*.props;build/**/*.targets" Pack="true" PackagePath="build/" />
+    <None Include="contentFiles/cs/any/**/*" Pack="true" PackagePath="contentFiles/cs/any" BuildAction="Compile" />
+    <Compile Remove="contentFiles/cs/any/**/*" />
   </ItemGroup>
 
   <Target Name="AddPackItems">
     <ItemGroup>
-      <TfmSpecificPackageFile Include="$(TargetDir)**\*" PackagePath="build/tools/" />
+      <TfmSpecificPackageFile Include="$(TargetDir)**/*" PackagePath="build/tools/" />
       <TfmSpecificPackageFile Include="$(TargetPath)" PackagePath="analyzers/dotnet/cs/" />
     </ItemGroup>
   </Target>
